CORE-35407: Fixed attribute label cursor, clear options button disabled state color and SPC cart page product item text mobile overflow issue.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/sofa-sectional/component/_sofa-sectional-accordion.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/sofa-sectional/component/_sofa-sectional-accordion.scss
@@ -10,6 +10,7 @@
       padding-top: 0.625rem;
       padding-bottom: 0.625rem;
       text-transform: capitalize;
+      cursor: pointer;
 
       &.active {
         .config-number-wrapper {
